// SPDX-License-Identifier: MIT

syntax = "proto2";

message pipe_data_entry {
	required uint32	pipe_id		= 1;
	required uint32	bytes		= 2;
	optional uint32 size		= 3;
}
